# simple-model-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: camera.h  mesh.h  model.h  renderer.h  shader.h  texture.h  viewer.cpp
src/shaders/: albedo.frag  normal.frag  position.frag  shader.frag  shader.vert  specular.frag  texcoords.frag  uvtest.frag
